--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
 			<optional>true</optional>
 			<scope>true</scope>
 		</dependency>
+		<!--getter/setter神器-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.12</version>
+        </dependency>
+		<!--工具类-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
