[start] spring-data-jpa 配置文件修改

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
 			<artifactId>ehcache</artifactId>
 		</dependency>
 
+		<!--swagger2-->
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
