--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,10 @@ spring:
     username: root
     password: 123
     driver-class-name: com.mysql.jdbc.Driver
-
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 com:
   xinchen:
     name: test
