[start] 关闭spring session redis

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,6 +13,15 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: UTC
+
 com:
   xinchen:
     name: test
+
+redis:
+  host:
+  port:
+  database:
