--- a/pom.xml
+++ b/pom.xml
@@ -88,11 +88,11 @@
 
 
 		<!--spring-session-->
-		<dependency>
-			<groupId>org.springframework.session</groupId>
-			<artifactId>spring-session-data-redis</artifactId>
-			<version>1.2.1.RELEASE</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.session</groupId>-->
+			<!--<artifactId>spring-session-data-redis</artifactId>-->
+			<!--<version>1.2.1.RELEASE</version>-->
+		<!--</dependency>-->
 
 		<!--swagger2-->
 		<!--<dependency>-->
