--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,27 +1,7 @@
 server:
-  port: 8089
-  session:
-    timeout: 1
-
+  port: 8080
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/dev
-    username: root
-    password: 123
-    driver-class-name: com.mysql.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-  jackson:
-    date-format: yyyy-MM-dd HH:mm:ss
-    time-zone: UTC
-
-com:
-  xinchen:
-    name: test
-
-redis:
-  host:
-  port:
-  database:
+  security:
+    user:
+      name: admin
+      password: admin
