--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,39 @@ target/
 *.iml
 *.ipr
 
+api/.idea
+api/target
+api/*.iws
+api/*.iml
+api/*.ipr
+
+
+service/.idea
+service/target
+service/*.iws
+service/*.iml
+service/*.ipr
+
+common/.idea
+common/target
+common/*.iws
+common/*.iml
+common/*.ipr
+
+
+context/.idea
+context/target
+context/*.iws
+context/*.iml
+context/*.ipr
+
+
+service-support/.idea
+service-support/target
+service-support/*.iws
+service-support/*.iml
+service-support/*.ipr
+
 ### NetBeans ###
 nbproject/private/
 build/
