--- a/web/src/main/resources/application-dev.properties
+++ b/web/src/main/resources/application-dev.properties
@@ -18,3 +18,7 @@ spring.jpa.open-in-view=true
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=UTC
+
+start.host.name=test
+start.host.ip=10.10.10.10
+start.host.port=8081
