--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.profiles.active=dev
+
+logging.pattern.console=%highlight(%d{yyyy-MM-dd HH:mm:ss.SSS}) |-%clr(PID:${PID:- }){magenta}|-%highlight(%-5level)| %boldYellow(%thread)| %green(%logger{36}) - %msg%n
